tests/baselines/reference/declFileWithErrorsInInputDeclarationFileWithOut.errors.txt
error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
tests/cases/compiler/declFile.d.ts(2,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
tests/cases/compiler/declFile.d.ts(3,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
tests/cases/compiler/declFile.d.ts(5,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
tests/cases/compiler/declFile.d.ts(7,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


!!! error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
==== tests/cases/compiler/client.ts (0 errors) ====
    ///<reference path="declFile.d.ts"/>
    var x = new M.C(); // Declaration file wont get emitted because there are errors in declaration file
    
==== tests/cases/compiler/declFile.d.ts (4 errors) ====
    declare module M {
        declare var x;
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
        declare function f();
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    
        declare module N { }
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    
        declare class C { }
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    }
    